objects/Invoice__c.object
<CustomObject><fields>
        <fullName>Cleaner__c</fullName>
        <label>Cleaner</label>
        <referenceTo>Cleaner__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Holds all the paid info for each Cleaner</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Invoice</label><nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Invoices</pluralLabel><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cleaner__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>